parser.output
   0  $accept : %entry% $end

   1  file : decl_list EOF

   2  decl_list :
   3            | decl decl_list

   4  decl : vardecl
   5       | fundef

   6  vardecl : type_spec declarator_list SEMI
   7          | type_spec ID ASSIGN expr SEMI

   8  declarator_list : ID
   9                  | ID COMMA declarator_list

  10  fundef : type_spec ID LPAR param_list_opt RPAR block

  11  type_spec : type_attr_list base_type_keyword pointer_depth

  12  pointer_depth :
  13                | STAR pointer_depth

  14  type_attr_list :
  15                 | type_attr type_attr_list

  16  type_attr : SIGNED
  17            | UNSIGNED
  18            | SHORT
  19            | LONG

  20  base_type_keyword : VOID
  21                    | CHAR
  22                    | INT
  23                    | FLOAT
  24                    | DOUBLE

  25  param_list_opt :
  26                 | param_list

  27  param_list : param
  28             | param COMMA param_list

  29  param : type_spec ID

  30  block : LBRACE var_decl_list instr_list RBRACE

  31  var_decl_list :
  32                | var_decl var_decl_list

  33  var_decl : type_spec declarator_list SEMI
  34           | type_spec ID ASSIGN expr SEMI

  35  instr_list :
  36             | instr instr_list

  37  instr : expr SEMI
  38        | SEMI
  39        | block
  40        | RETURN expr SEMI
  41        | IF LPAR expr RPAR instr ELSE instr
  42        | IF LPAR expr RPAR instr
  43        | WHILE LPAR expr RPAR instr
  44        | DO instr WHILE LPAR expr RPAR SEMI
  45        | FOR LPAR for_init SEMI expr_opt SEMI expr_opt RPAR instr

  46  expr_opt :
  47           | expr

  48  for_init :
  49           | type_spec ID ASSIGN expr
  50           | type_spec declarator_list
  51           | for_init_expr

  52  for_init_expr : assign_expr

  53  assign_expr : or_expr
  54              | or_expr ASSIGN assign_expr
  55              | or_expr PLUSEQ assign_expr
  56              | or_expr MINUSEQ assign_expr
  57              | or_expr STAREQ assign_expr
  58              | or_expr SLASHEQ assign_expr
  59              | or_expr PERCENTEQ assign_expr

  60  or_expr : and_expr
  61          | or_expr OR and_expr

  62  and_expr : eq_expr
  63           | and_expr AND eq_expr

  64  eq_expr : rel_expr
  65          | eq_expr EQ rel_expr
  66          | eq_expr NEQ rel_expr

  67  rel_expr : add_expr
  68           | rel_expr LT add_expr
  69           | rel_expr GT add_expr
  70           | rel_expr LE add_expr
  71           | rel_expr GE add_expr

  72  add_expr : mult_expr
  73           | add_expr PLUS mult_expr
  74           | add_expr MINUS mult_expr

  75  mult_expr : unary_expr
  76            | mult_expr STAR unary_expr
  77            | mult_expr SLASH unary_expr
  78            | mult_expr PERCENT unary_expr

  79  unary_expr : postfix_expr
  80             | INC unary_expr
  81             | DEC unary_expr
  82             | MINUS unary_expr
  83             | BANG unary_expr
  84             | STAR unary_expr
  85             | AMPERSAND unary_expr
  86             | SIZEOF LPAR type_spec RPAR
  87             | LPAR type_spec RPAR unary_expr

  88  postfix_expr : call_expr
  89               | primary_expr
  90               | postfix_expr LBRACKET expr RBRACKET
  91               | postfix_expr INC
  92               | postfix_expr DEC

  93  call_expr : ID LPAR arg_list RPAR

  94  primary_expr : INTCONST
  95               | FLOATCONST
  96               | STRINGCONST
  97               | ID
  98               | LPAR expr RPAR

  99  expr : assign_expr

 100  arg_list :
 101           | non_empty_arg_list

 102  non_empty_arg_list : expr
 103                     | expr COMMA non_empty_arg_list

 104  %entry% : '\001' file

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . file  (104)
	decl_list : .  (2)
	type_attr_list : .  (14)

	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14
	EOF  reduce 2

	file  goto 7
	decl_list  goto 8
	decl  goto 9
	vardecl  goto 10
	fundef  goto 11
	type_spec  goto 12
	type_attr_list  goto 13
	type_attr  goto 14


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	type_attr : SIGNED .  (16)

	.  reduce 16


state 4
	type_attr : UNSIGNED .  (17)

	.  reduce 17


state 5
	type_attr : SHORT .  (18)

	.  reduce 18


state 6
	type_attr : LONG .  (19)

	.  reduce 19


state 7
	%entry% : '\001' file .  (104)

	.  reduce 104


state 8
	file : decl_list . EOF  (1)

	EOF  shift 15
	.  error


state 9
	decl_list : decl . decl_list  (3)
	decl_list : .  (2)
	type_attr_list : .  (14)

	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14
	EOF  reduce 2

	decl_list  goto 16
	decl  goto 9
	vardecl  goto 10
	fundef  goto 11
	type_spec  goto 12
	type_attr_list  goto 13
	type_attr  goto 14


state 10
	decl : vardecl .  (4)

	.  reduce 4


state 11
	decl : fundef .  (5)

	.  reduce 5


state 12
	vardecl : type_spec . declarator_list SEMI  (6)
	vardecl : type_spec . ID ASSIGN expr SEMI  (7)
	fundef : type_spec . ID LPAR param_list_opt RPAR block  (10)

	ID  shift 17
	.  error

	declarator_list  goto 18


state 13
	type_spec : type_attr_list . base_type_keyword pointer_depth  (11)

	VOID  shift 19
	CHAR  shift 20
	INT  shift 21
	FLOAT  shift 22
	DOUBLE  shift 23
	.  error

	base_type_keyword  goto 24


state 14
	type_attr_list : type_attr . type_attr_list  (15)
	type_attr_list : .  (14)

	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14

	type_attr_list  goto 25
	type_attr  goto 14


state 15
	file : decl_list EOF .  (1)

	.  reduce 1


state 16
	decl_list : decl decl_list .  (3)

	.  reduce 3


state 17
	vardecl : type_spec ID . ASSIGN expr SEMI  (7)
	declarator_list : ID .  (8)
	declarator_list : ID . COMMA declarator_list  (9)
	fundef : type_spec ID . LPAR param_list_opt RPAR block  (10)

	ASSIGN  shift 26
	LPAR  shift 27
	COMMA  shift 28
	SEMI  reduce 8


state 18
	vardecl : type_spec declarator_list . SEMI  (6)

	SEMI  shift 29
	.  error


state 19
	base_type_keyword : VOID .  (20)

	.  reduce 20


state 20
	base_type_keyword : CHAR .  (21)

	.  reduce 21


state 21
	base_type_keyword : INT .  (22)

	.  reduce 22


state 22
	base_type_keyword : FLOAT .  (23)

	.  reduce 23


state 23
	base_type_keyword : DOUBLE .  (24)

	.  reduce 24


state 24
	type_spec : type_attr_list base_type_keyword . pointer_depth  (11)
	pointer_depth : .  (12)

	STAR  shift 30
	RPAR  reduce 12
	ID  reduce 12

	pointer_depth  goto 31


state 25
	type_attr_list : type_attr type_attr_list .  (15)

	.  reduce 15


state 26
	vardecl : type_spec ID ASSIGN . expr SEMI  (7)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	expr  goto 44
	assign_expr  goto 45
	or_expr  goto 46
	and_expr  goto 47
	eq_expr  goto 48
	rel_expr  goto 49
	add_expr  goto 50
	mult_expr  goto 51
	unary_expr  goto 52
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 27
	fundef : type_spec ID LPAR . param_list_opt RPAR block  (10)
	type_attr_list : .  (14)
	param_list_opt : .  (25)

	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	RPAR  reduce 25
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14

	type_spec  goto 56
	param_list_opt  goto 57
	type_attr_list  goto 13
	type_attr  goto 14
	param_list  goto 58
	param  goto 59


state 28
	declarator_list : ID COMMA . declarator_list  (9)

	ID  shift 60
	.  error

	declarator_list  goto 61


state 29
	vardecl : type_spec declarator_list SEMI .  (6)

	.  reduce 6


state 30
	pointer_depth : STAR . pointer_depth  (13)
	pointer_depth : .  (12)

	STAR  shift 30
	RPAR  reduce 12
	ID  reduce 12

	pointer_depth  goto 62


state 31
	type_spec : type_attr_list base_type_keyword pointer_depth .  (11)

	.  reduce 11


state 32
	unary_expr : MINUS . unary_expr  (82)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 63
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 33
	unary_expr : STAR . unary_expr  (84)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 64
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 34
	unary_expr : BANG . unary_expr  (83)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 65
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 35
	unary_expr : INC . unary_expr  (80)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 66
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 36
	unary_expr : DEC . unary_expr  (81)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 67
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 37
	unary_expr : LPAR . type_spec RPAR unary_expr  (87)
	primary_expr : LPAR . expr RPAR  (98)
	type_attr_list : .  (14)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14

	type_spec  goto 68
	expr  goto 69
	type_attr_list  goto 13
	type_attr  goto 14
	assign_expr  goto 45
	or_expr  goto 46
	and_expr  goto 47
	eq_expr  goto 48
	rel_expr  goto 49
	add_expr  goto 50
	mult_expr  goto 51
	unary_expr  goto 52
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 38
	unary_expr : SIZEOF . LPAR type_spec RPAR  (86)

	LPAR  shift 70
	.  error


state 39
	unary_expr : AMPERSAND . unary_expr  (85)

	MINUS  shift 32
	STAR  shift 33
	BANG  shift 34
	INC  shift 35
	DEC  shift 36
	LPAR  shift 37
	SIZEOF  shift 38
	AMPERSAND  shift 39
	ID  shift 40
	INTCONST  shift 41
	FLOATCONST  shift 42
	STRINGCONST  shift 43
	.  error

	unary_expr  goto 71
	postfix_expr  goto 53
	call_expr  goto 54
	primary_expr  goto 55


state 40
	call_expr : ID . LPAR arg_list RPAR  (93)
	primary_expr : ID .  (97)

	LPAR  shift 72
	PLUS  reduce 97
	MINUS  reduce 97
	STAR  reduce 97
	SLASH  reduce 97
	PERCENT  reduce 97
	EQ  reduce 97
	NEQ  reduce 97
	LT  reduce 97
	LE  reduce 97
	GT  reduce 97
	GE  reduce 97
	AND  reduce 97
	OR  reduce 97
	ASSIGN  reduce 97
	PLUSEQ  reduce 97
	MINUSEQ  reduce 97
	STAREQ  reduce 97
	SLASHEQ  reduce 97
	PERCENTEQ  reduce 97
	INC  reduce 97
	DEC  reduce 97
	RPAR  reduce 97
	LBRACKET  reduce 97
	RBRACKET  reduce 97
	SEMI  reduce 97
	COMMA  reduce 97


state 41
	primary_expr : INTCONST .  (94)

	.  reduce 94


state 42
	primary_expr : FLOATCONST .  (95)

	.  reduce 95


state 43
	primary_expr : STRINGCONST .  (96)

	.  reduce 96


state 44
	vardecl : type_spec ID ASSIGN expr . SEMI  (7)

	SEMI  shift 73
	.  error


state 45
	expr : assign_expr .  (99)

	.  reduce 99


state 46
	assign_expr : or_expr .  (53)
	assign_expr : or_expr . ASSIGN assign_expr  (54)
	assign_expr : or_expr . PLUSEQ assign_expr  (55)
	assign_expr : or_expr . MINUSEQ assign_expr  (56)
	assign_expr : or_expr . STAREQ assign_expr  (57)
	assign_expr : or_expr . SLASHEQ assign_expr  (58)
	assign_expr : or_expr . PERCENTEQ assign_expr  (59)
	or_expr : or_expr . OR and_expr  (61)

	OR  shift 74
	ASSIGN  shift 75
	PLUSEQ  shift 76
	MINUSEQ  shift 77
	STAREQ  shift 78
	SLASHEQ  shift 79
	PERCENTEQ  shift 80
	RPAR  reduce 53
	RBRACKET  reduce 53
	SEMI  reduce 53
	COMMA  reduce 53


state 47
	or_expr : and_expr .  (60)
	and_expr : and_expr . AND eq_expr  (63)

	AND  shift 81
	OR  reduce 60
	ASSIGN  reduce 60
	PLUSEQ  reduce 60
	MINUSEQ  reduce 60
	STAREQ  reduce 60
	SLASHEQ  reduce 60
	PERCENTEQ  reduce 60
	RPAR  reduce 60
	RBRACKET  reduce 60
	SEMI  reduce 60
	COMMA  reduce 60


state 48
	and_expr : eq_expr .  (62)
	eq_expr : eq_expr . EQ rel_expr  (65)
	eq_expr : eq_expr . NEQ rel_expr  (66)

	EQ  shift 82
	NEQ  shift 83
	AND  reduce 62
	OR  reduce 62
	ASSIGN  reduce 62
	PLUSEQ  reduce 62
	MINUSEQ  reduce 62
	STAREQ  reduce 62
	SLASHEQ  reduce 62
	PERCENTEQ  reduce 62
	RPAR  reduce 62
	RBRACKET  reduce 62
	SEMI  reduce 62
	COMMA  reduce 62


state 49
	eq_expr : rel_expr .  (64)
	rel_expr : rel_expr . LT add_expr  (68)
	rel_expr : rel_expr . GT add_expr  (69)
	rel_expr : rel_expr . LE add_expr  (70)
	rel_expr : rel_expr . GE add_expr  (71)

	LT  shift 84
	LE  shift 85
	GT  shift 86
	GE  shift 87
	EQ  reduce 64
	NEQ  reduce 64
	AND  reduce 64
	OR  reduce 64
	ASSIGN  reduce 64
	PLUSEQ  reduce 64
	MINUSEQ  reduce 64
	STAREQ  reduce 64
	SLASHEQ  reduce 64
	PERCENTEQ  reduce 64
	RPAR  reduce 64
	RBRACKET  reduce 64
	SEMI  reduce 64
	COMMA  reduce 64


state 50
	rel_expr : add_expr .  (67)
	add_expr : add_expr . PLUS mult_expr  (73)
	add_expr : add_expr . MINUS mult_expr  (74)

	PLUS  shift 88
	MINUS  shift 89
	EQ  reduce 67
	NEQ  reduce 67
	LT  reduce 67
	LE  reduce 67
	GT  reduce 67
	GE  reduce 67
	AND  reduce 67
	OR  reduce 67
	ASSIGN  reduce 67
	PLUSEQ  reduce 67
	MINUSEQ  reduce 67
	STAREQ  reduce 67
	SLASHEQ  reduce 67
	PERCENTEQ  reduce 67
	RPAR  reduce 67
	RBRACKET  reduce 67
	SEMI  reduce 67
	COMMA  reduce 67


state 51
	add_expr : mult_expr .  (72)
	mult_expr : mult_expr . STAR unary_expr  (76)
	mult_expr : mult_expr . SLASH unary_expr  (77)
	mult_expr : mult_expr . PERCENT unary_expr  (78)

	STAR  shift 90
	SLASH  shift 91
	PERCENT  shift 92
	PLUS  reduce 72
	MINUS  reduce 72
	EQ  reduce 72
	NEQ  reduce 72
	LT  reduce 72
	LE  reduce 72
	GT  reduce 72
	GE  reduce 72
	AND  reduce 72
	OR  reduce 72
	ASSIGN  reduce 72
	PLUSEQ  reduce 72
	MINUSEQ  reduce 72
	STAREQ  reduce 72
	SLASHEQ  reduce 72
	PERCENTEQ  reduce 72
	RPAR  reduce 72
	RBRACKET  reduce 72
	SEMI  reduce 72
	COMMA  reduce 72


state 52
	mult_expr : unary_expr .  (75)

	.  reduce 75


state 53
	unary_expr : postfix_expr .  (79)
	postfix_expr : postfix_expr . LBRACKET expr RBRACKET  (90)
	postfix_expr : postfix_expr . INC  (91)
	postfix_expr : postfix_expr . DEC  (92)

	INC  shift 93
	DEC  shift 94
	LBRACKET  shift 95
	PLUS  reduce 79
	MINUS  reduce 79
	STAR  reduce 79
	SLASH  reduce 79
	PERCENT  reduce 79
	EQ  reduce 79
	NEQ  reduce 79
	LT  reduce 79
	LE  reduce 79
	GT  reduce 79
	GE  reduce 79
	AND  reduce 79
	OR  reduce 79
	ASSIGN  reduce 79
	PLUSEQ  reduce 79
	MINUSEQ  reduce 79
	STAREQ  reduce 79
	SLASHEQ  reduce 79
	PERCENTEQ  reduce 79
	RPAR  reduce 79
	RBRACKET  reduce 79
	SEMI  reduce 79
	COMMA  reduce 79


state 54
	postfix_expr : call_expr .  (88)

	.  reduce 88


state 55
	postfix_expr : primary_expr .  (89)

	.  reduce 89


state 56
	param : type_spec . ID  (29)

	ID  shift 96
	.  error


state 57
	fundef : type_spec ID LPAR param_list_opt . RPAR block  (10)

	RPAR  shift 97
	.  error


state 58
	param_list_opt : param_list .  (26)

	.  reduce 26


state 59
	param_list : param .  (27)
	param_list : param . COMMA param_list  (28)

	COMMA  shift 98
	RPAR  reduce 27


state 60
	declarator_list : ID .  (8)
	declarator_list : ID . COMMA declarator_list  (9)

	COMMA  shift 28
	SEMI  reduce 8


state 61
	declarator_list : ID COMMA declarator_list .  (9)

	.  reduce 9


state 62
	pointer_depth : STAR pointer_depth .  (13)

	.  reduce 13


state 63
	unary_expr : MINUS unary_expr .  (82)

	.  reduce 82


state 64
	unary_expr : STAR unary_expr .  (84)

	.  reduce 84


state 65
	unary_expr : BANG unary_expr .  (83)

	.  reduce 83


state 66
	unary_expr : INC unary_expr .  (80)

	.  reduce 80


state 67
	unary_expr : DEC unary_expr .  (81)

	.  reduce 81


state 68
	unary_expr : LPAR type_spec . RPAR unary_expr  (87)

	RPAR  shift 99
	.  error


state 69
	primary_expr : LPAR expr . RPAR  (98)

	RPAR  shift 100
	.  error


state 70
	unary_expr : SIZEOF LPAR . type_spec RPAR  (86)
	type_attr_list : .  (14)

	SIGNED  shift 3
	UNSIGNED  shift 4
	SHORT  shift 5
	LONG  shift 6
	VOID  reduce 14
	CHAR  reduce 14
	INT  reduce 14
	FLOAT  reduce 14
	DOUBLE  reduce 14

	type_spec  goto 101
	type_attr_list  goto 13
	type_attr  goto 14


state 71
	unary_expr : AMPERSAND unary_expr .  (85)

	.  reduce 85

